fixed past shift issue + more minor UI fixes

--- a/client_app/src/index.css
+++ b/client_app/src/index.css
@@ -189,8 +189,6 @@ p {
   flex-direction: column; 
   align-items: center; 
   background-color: #bde3c8;
-  margin: 15px;
-  padding: 0.5em;
 }
 
 .cancelbtn {
@@ -213,6 +211,10 @@ p {
   border: 1px solid black;
   background-color: #9d8021a9;
   text-align: center;
+}
+
+.shift.past p {
+  margin-bottom: 10px;
 }
 
 .shift input[type="checkbox"] {
@@ -261,7 +263,8 @@ p {
 }
 
 .volunteer-dashboard .column-3 {
-  flex: 1;
+  /* allows the entire dashboard page to seem more evenly spaced */
+  flex: 1.1;
 }
 
 .volunteer-dashboard .card {
@@ -281,6 +284,9 @@ p {
 
 .volunteer-dashboard .column-3 .card {
   background: #05b1d85c;
+  /* applied same margin from shelter, shift, and signupcard class, which
+  allows the entire dashboard page to seem more evenly spaced */
+  margin: 15px;
 }
 
 .volunteer-dashboard .column-3 .card p {
